--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -19,7 +19,9 @@ main:
   - name: Contact
     url: '#contact'
     weight: 50
-
+  - name: More
+    url: '#more'
+    weight: 60
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
 #  - name: CV
