--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -20,13 +20,13 @@ twitter: ''
 
 # Contact (edit or remove options as required)
 
-email: fy4bc@virginia.edu
+email: fanyao@unc.edu
 phone: +1 434 227 6287
 address:
-  street: Rice Hall, 85 Engineer's Way
-  city: Charlottesville
-  region: VA
-  postcode: '22904'
+  street: Hanes Hall, University of North Carolina at Chapel Hill
+  city: Chapel Hill
+  region: NC
+  postcode: '27514'
   country: United States
   country_code: US
 # coordinates:
